--- a/links/index.html
+++ b/links/index.html
@@ -63,7 +63,7 @@
 		</hgroup>
 
 		
-		<p class="header-subtitle">耐得住寂寞，守得住繁华。</p>
+		<p class="header-subtitle">The best or nothing.</p>
 		
 
 		
@@ -126,7 +126,7 @@
 			  <h1 class="header-author"><a href="/">小菜</a></h1>
 			</hgroup>
 			
-			<p class="header-subtitle">耐得住寂寞，守得住繁华。</p>
+			<p class="header-subtitle">The best or nothing.</p>
 			
 			<nav class="header-menu">
 				<ul>
