--- a/about-me/index.html
+++ b/about-me/index.html
@@ -222,25 +222,22 @@
 
 
 
-<div class="duoshuo">
-	<!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="undefined" data-title="" data-url="icaife.github.io/about-me/index.html"></div>
-	<!-- 多说评论框 end -->
-	<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-	<script type="text/javascript">
+<!-- 多说评论框 start -->
+<div class="ds-thread" data-thread-key="45e2b3acc0e99bcaa758d1889b9a09ca" data-title="" data-url="icaife.github.io/about-me/index.html"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
 	var duoshuoQuery = {short_name:"true"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.unstable.js';
 		ds.charset = 'UTF-8';
 		(document.getElementsByTagName('head')[0] 
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 	</script>
-	<!-- 多说公共JS代码 end -->
-</div>
-
+<!-- 多说公共JS代码 end -->
 
 
 
