--- a/about-me/index.html
+++ b/about-me/index.html
@@ -223,7 +223,7 @@
 
 
 <!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="" ds-key="45e2b3acc0e99bcaa758d1889b9a09ca" data-title="" data-url="icaife.github.io/about-me/index.html"></div>
+<div class="ds-thread" data-thread-key="undefined" ds-key="45e2b3acc0e99bcaa758d1889b9a09ca" data-title="" data-url="icaife.github.io/about-me/index.html"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
